# Copyright (c) 2022 Microsoft, Inc.
# Use of this source code is governed by the MIT license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

mojom("mojom") {
  sources = [ "node_service.mojom" ]
  public_deps = [
    "//mojo/public/mojom/base",
    "//sandbox/policy/mojom",
    "//third_party/blink/public/mojom:mojom_core",
  ]
}
